frontend/test/should_fail/computations_no_break_continue_002.grg
function foo() : boolean
{
	if(true) {
		break;
	}
	return(true);
}
